[gd_scene load_steps=33 format=3 uid="uid://dw6o21xpbg0vi"]

[ext_resource type="Texture2D" uid="uid://br4mb2xcxb2vn" path="res://Assets/Tentacles/tentacle-ezgif.com-gif-to-sprite-converter.png" id="1_g77hf"]
[ext_resource type="Script" path="res://Scenes/tentacle_animation_helper.gd" id="1_hwqss"]
[ext_resource type="Material" uid="uid://d1b55mpjxp0q1" path="res://Materials/deep.tres" id="2_ltpep"]
[ext_resource type="Texture2D" uid="uid://ddubeq2rkvdb3" path="res://Assets/Tentacles/tentacleidle-ezgif.com-gif-to-sprite-converter (1).png" id="2_urrry"]
[ext_resource type="Texture2D" uid="uid://r7cw6uxatn3r" path="res://Assets/Tentacles/spritesheet (5).png" id="3_ep83j"]
[ext_resource type="Texture2D" uid="uid://r30rp5xsjx7l" path="res://Assets/Tentacles/spritesheet (3).png" id="3_rc6l3"]
[ext_resource type="Texture2D" uid="uid://bqdwow51jlcho" path="res://Assets/Tentacles/spritesheet (6).png" id="4_7klwv"]
[ext_resource type="Texture2D" uid="uid://dhfofe4w3rsd0" path="res://Assets/Tentacles/spritesheet (4).png" id="4_8winc"]

[sub_resource type="CylinderMesh" id="CylinderMesh_vhf1l"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y43wu"]
animation = &"RESET"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7aiat"]
animation = &"animation_test"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wf45c"]
animation = &"animation_test2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c1w1b"]
animation = &"animation_test_3"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j6bdk"]
animation = &"tentacle_attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_taik4"]
animation = &"tentacle_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0dlfo"]
animation = &"tentacle_retract"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_csysv"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pol2w"]
advance_mode = 2
advance_condition = &"attack_finished"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xbyhp"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bklk3"]
advance_mode = 2
advance_condition = &"attack_start"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h1pir"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lucsn"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g20cy"]
advance_mode = 2
advance_condition = &"attack_finished"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ebm7c"]
states/RESET/node = SubResource("AnimationNodeAnimation_y43wu")
states/RESET/position = Vector2(302, 131)
states/Start/position = Vector2(145, 91)
states/animation_test/node = SubResource("AnimationNodeAnimation_7aiat")
states/animation_test/position = Vector2(357, 234)
states/animation_test2/node = SubResource("AnimationNodeAnimation_wf45c")
states/animation_test2/position = Vector2(561, 229)
states/animation_test_3/node = SubResource("AnimationNodeAnimation_c1w1b")
states/animation_test_3/position = Vector2(483, 162)
states/tentacle_attack/node = SubResource("AnimationNodeAnimation_j6bdk")
states/tentacle_attack/position = Vector2(352, 37)
states/tentacle_idle/node = SubResource("AnimationNodeAnimation_taik4")
states/tentacle_idle/position = Vector2(587, 30)
states/tentacle_retract/node = SubResource("AnimationNodeAnimation_0dlfo")
states/tentacle_retract/position = Vector2(444, 100)
transitions = ["tentacle_attack", "tentacle_idle", SubResource("AnimationNodeStateMachineTransition_csysv"), "tentacle_idle", "tentacle_retract", SubResource("AnimationNodeStateMachineTransition_pol2w"), "Start", "RESET", SubResource("AnimationNodeStateMachineTransition_xbyhp"), "RESET", "animation_test", SubResource("AnimationNodeStateMachineTransition_bklk3"), "animation_test", "animation_test2", SubResource("AnimationNodeStateMachineTransition_h1pir"), "animation_test_3", "RESET", SubResource("AnimationNodeStateMachineTransition_lucsn"), "animation_test2", "animation_test_3", SubResource("AnimationNodeStateMachineTransition_g20cy")]
graph_offset = Vector2(-21, 1)

[sub_resource type="Animation" id="Animation_i5uyw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tentacle_back:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Tentacle_back:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Tentacle_front:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Tentacle_front:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Tentacle_front:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_rc6l3")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Tentacle_back:texture")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_8winc")]
}

[sub_resource type="Animation" id="Animation_afr0e"]
resource_name = "animation_test"
length = 0.4
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tentacle_back:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tentacle_back:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Tentacle_front:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Tentacle_front:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Tentacle_front:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ep83j")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Tentacle_back:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_7klwv")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Tentacle_back:hframes")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Tentacle_front:hframes")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_swqry"]
resource_name = "animation_test2"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tentacle_front:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tentacle_back:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 2, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Tentacle_back:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Tentacle_front:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 2, 1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Tentacle_back:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Tentacle_back:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_8winc")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Tentacle_front:hframes")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Tentacle_front:texture")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_rc6l3")]
}

[sub_resource type="Animation" id="Animation_swp5p"]
resource_name = "animation_test_3"
length = 0.45
step = 0.04
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tentacle_back:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.44),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tentacle_back:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Tentacle_front:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.44),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Tentacle_front:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Tentacle_front:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ep83j")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Tentacle_back:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_7klwv")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Tentacle_back:hframes")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Tentacle_front:hframes")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_jq4g8"]
resource_name = "tentacle_attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_g77hf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_xtyko"]
resource_name = "tentacle_idle"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_urrry")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_knche"]
resource_name = "tentacle_retract"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_g77hf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 4, 3, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_evqry"]
_data = {
"RESET": SubResource("Animation_i5uyw"),
"animation_test": SubResource("Animation_afr0e"),
"animation_test2": SubResource("Animation_swqry"),
"animation_test_3": SubResource("Animation_swp5p"),
"tentacle_attack": SubResource("Animation_jq4g8"),
"tentacle_idle": SubResource("Animation_xtyko"),
"tentacle_retract": SubResource("Animation_knche")
}

[node name="Tentacle" type="Node3D"]
top_level = true
script = ExtResource("1_hwqss")
front_offset = 10.2
back_offset = 9.7

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(4.59118, 0, 0, 0, 0.00999558, 0, 0, 0, 4.59118, 0, 0.0605993, 0)
material_override = ExtResource("2_ltpep")
mesh = SubResource("CylinderMesh_vhf1l")
skeleton = NodePath("../Sprite3D")

[node name="Tentacle_front" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.75393, 0, 0, 0, 1, -0.042822, 0.600255, 0.0315444)
visible = false
sorting_offset = 9.7
pixel_size = 0.006
billboard = 1
texture_filter = 2
texture = ExtResource("3_rc6l3")
hframes = 3
frame = 1

[node name="Tentacle_back" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.75393, 0, 0, 0, 1, -0.042822, 0.600255, 0.0315444)
visible = false
sorting_offset = 10.2
pixel_size = 0.006
billboard = 1
texture_filter = 2
texture = ExtResource("4_8winc")
hframes = 3

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00337768, 2.56115, -0.000770569)
visible = false
billboard = 1
texture_filter = 0
hframes = 3
vframes = 2
frame = 2

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_ebm7c")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack_finished = true
parameters/conditions/attack_start = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_evqry")
}

[node name="TentacleLingerTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DOTTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Sprite3D2" type="Sprite3D" parent="."]
